// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IkBadge renders outer 1`] = `
<div
  class="ik-badge ik-badge--outer"
>
  <div
    class="ik-badge__content"
  />
  <div
    class="ik-badge__dot"
    style="width: 12px; height: 12px;"
  />
</div>
`;

exports[`IkBadge renders with correct default state 1`] = `
<div
  class="ik-badge"
>
  <div
    class="ik-badge__content"
    style="mask: radial-gradient(circle 8px at calc(100% - 6px) calc(100% - 6px), transparent 95%, #fff 100%);"
  />
  <div
    class="ik-badge__dot"
    style="width: 12px; height: 12px;"
  />
</div>
`;
